<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_margin="10dp">
    <LinearLayout
    android:id="@+id/lineartop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Text"
            android:textSize="22dp"
            android:textColor="@color/colorAccent"/>
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <EditText
                android:id="@+id/editText1"
                android:hint="@string/first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
            />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:src="@drawable/cal"
                android:layout_weight="20"
               android:layout_below="@+id/datepicker"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date Of Birth"
            android:textSize="22dp"
            android:textColor="@color/colorAccent" />
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:hint="@string/second" />
            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="20"
                android:src="@drawable/cal"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/item1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@color/colorPrimary"
                android:text="@string/sum"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@color/colorPrimary"
                android:text="@string/clear"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
<LinearLayout
    android:id="@+id/linearmid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AGE"
            android:textSize="22dp"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="75"
            android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/years"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="Year"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"

            />

        <TextView
            android:id="@+id/months"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="Month"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"/>
            />
            <TextView
                android:id="@+id/days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="center_horizontal"
                android:text="Day"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="75"
                android:layout_marginTop="0dp">


                <TextView
                    android:id="@+id/year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="00"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/background_dark"></TextView>
                <TextView
                    android:id="@+id/month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="00"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/background_dark"/>
                <TextView
                    android:id="@+id/day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="00"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/background_dark"
                    />


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/next_Birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next Birthday"
            android:textSize="22dp"
            android:textColor="@color/colorPrimary"/>
        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/month1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Month"
            android:gravity="center_horizontal"
            android:paddingRight="45dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/day1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Day"
            android:gravity="center_horizontal"
            android:paddingLeft="65dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/linear7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
       >
        <TextView
            android:id="@+id/month3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="00"
            android:gravity="center_horizontal"
            android:paddingRight="45dp"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"/>
        <TextView
            android:id="@+id/day3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="00"
            android:gravity="center_horizontal"
            android:paddingLeft="65dp"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"/>
    </LinearLayout>
        <TextView
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Extra"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp"
            android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
    <LinearLayout
        android:id="@+id/linear6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
      android:layout_weight="1"
       android:paddingLeft="30dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/year1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Total Years"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/month2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Total Months"
            android:textColor="@android:color/background_dark"/>

        <TextView
            android:id="@+id/day2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Total days"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"/>
        <TextView
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Total Hours"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"/>
        <TextView
            android:id="@+id/minutes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Total Minutes"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            ></TextView>
        <TextView
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Total Second"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
           <TextView
               android:id="@+id/total"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:textColor="@android:color/background_dark"
               android:text="0"/>

            <TextView
                android:id="@+id/total1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@android:color/background_dark"
                android:layout_weight="1"
                android:text="0"/>
            <TextView
                android:id="@+id/total2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/background_dark"
                android:text="0"/>
            <TextView
                android:id="@+id/total3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/background_dark"
                android:text="0"/>
            <TextView
                android:id="@+id/total4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/background_dark"
                android:text="0"/>
            <TextView
                android:id="@+id/total5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
               android:textColor="@android:color/background_dark"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upcoming Birthday"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"/>


</LinearLayout>
</LinearLayout>

</ScrollView>
